--- a/fl-war-frontend/src/App.css
+++ b/fl-war-frontend/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.card {
+  max-width: 150px;
+  max-height: 75px;
+  border-radius: 4px;
+  background-color: grey;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
