--- a/fl-war-frontend/src/App.css
+++ b/fl-war-frontend/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+h1{
+  margin: 0;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -41,12 +45,13 @@
 .nav-bar {
  display: flex;
  justify-content: center;
- gap: 10px;
+ gap: 20px;
  margin-bottom: 10px;
  padding-bottom: 5px;
 }
 .navbar-frame{
-  background-color: whitesmoke
+  background-color: whitesmoke;
+margin: 0;
 }
 
 .center{
@@ -55,6 +60,26 @@
 
 .third{
   margin-top: 7vh;
+}
+
+.third-left{
+  margin-top: 7vh;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 20px;
+}
+
+p{
+  gap: 20px;
+}
+
+.center-text{
+  text-align: center;
+}
+
+h3{
+  text-align: center;
 }
 
 .player-status{
