--- a/fl-war-frontend/src/App.css
+++ b/fl-war-frontend/src/App.css
@@ -143,6 +143,11 @@ h3{
   margin-bottom: 10px;
 }
 
+.create-deck-frame{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
 
 .click-able{
   cursor: pointer;
